feat: serve health check at root path
